crates/ruff_python_parser/tests/snapshots/invalid_syntax@try_stmt_invalid_order.py.snap
---
source: crates/ruff_python_parser/tests/fixtures.rs
input_file: crates/ruff_python_parser/resources/inline/err/try_stmt_invalid_order.py
---
## AST

```
Module(
    ModModule {
        node_index: NodeIndex(None),
        range: 0..47,
        body: Suite {
            range: 0..47,
            node_index: NodeIndex(None),
            statements: [
                Try(
                    StmtTry {
                        node_index: NodeIndex(None),
                        range: 0..31,
                        body: Suite {
                            range: 4..13,
                            node_index: NodeIndex(None),
                            statements: [
                                Pass(
                                    StmtPass {
                                        node_index: NodeIndex(None),
                                        range: 9..13,
                                    },
                                ),
                            ],
                        },
                        handlers: [],
                        orelse: Suite {
                            range: 13..13,
                            node_index: NodeIndex(None),
                            statements: [],
                        },
                        finalbody: Suite {
                            range: 22..31,
                            node_index: NodeIndex(None),
                            statements: [
                                Pass(
                                    StmtPass {
                                        node_index: NodeIndex(None),
                                        range: 27..31,
                                    },
                                ),
                            ],
                        },
                        is_star: false,
                    },
                ),
                Pass(
                    StmtPass {
                        node_index: NodeIndex(None),
                        range: 42..46,
                    },
                ),
            ],
        },
    },
)
```
## Errors

  |
3 | finally:
4 |     pass
5 | else:
  | ^^^^ Syntax Error: `else` block must come before `finally` block
6 |     pass
  |


  |
3 | finally:
4 |     pass
5 | else:
  |     ^ Syntax Error: Expected a statement
6 |     pass
  |


  |
3 | finally:
4 |     pass
5 | else:
  |      ^ Syntax Error: Expected a statement
6 |     pass
  |


  |
4 |     pass
5 | else:
6 |     pass
  | ^^^^ Syntax Error: Unexpected indentation
  |


  |
5 | else:
6 |     pass
  |         ^ Syntax Error: Expected a statement
  |
